# hyprland-minimizer

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
doc/: hyprland-minimizer.5.md
src/: cli.rs  config.rs  hyprland.rs  main.rs  menu.rs  minimize.rs  restore.rs  stack.rs
src/dbus/: menu.rs  mod.rs  notifier.rs
