# This file defines the project metadata and dependencies.
# Place this in the root directory of your new Rust project.

[package]
name = "hyprland-minimizer"
version = "0.0.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# zbus is a modern, async D-Bus library
zbus = "3"

# tokio is the asynchronous runtime
tokio = { version = "1", features = ["full"] }

# For parsing JSON output from hyprctl
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For handling errors gracefully
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3"                                # <--- This is needed for the .next() method on streams
async-trait = "0.1.88"
figment = { version = "0.10.19", features = ["toml"] }

[dev-dependencies]
tempfile = "3.10"
