[package]
name = "hyprland-minimizer"
authors = ["Denis Chevalier"]
version = "0.0.2"
edition = "2024"

[dependencies]
# zbus is a modern, async D-Bus library
zbus = "3"

# tokio is the asynchronous runtime
tokio = { version = "1", features = ["full"] }

# For parsing JSON output from hyprctl
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For handling errors gracefully
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3"
async-trait = "0.1.88"
figment = { version = "0.10.19", features = ["toml"] }
directories = "6.0.0"
toml = "0.9.4"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
